5.0a2 -> 5.0a3:
    - jbj: finalize headerMod, add to the ABI, remove HME_t goop.
    - jbj: finalize headerDel, add to the ABI, remove HRE_t goop.
    - jbj: finalize headerPut, add to the ABI, remove HAE_t goop.
    - jbj: finalize headerGet, add to the ABI, remove HGE_t goop.
    - jbj: re-add headerSprintf to the ABI, removing wrappers/methods.
    - jbj: move headerSprintf goop out of header.c into hdrfmt.c.
    - jbj: python: hmmm, add header extensions to dictionary correctly.
    - jbj: terminate on headerTagTable sentinel, don't use rpmTagTableSize.
    - jbj: use NULL default, not rpmTagTable, arg to headerSprintf everywhere.
    - jbj: hdrfmt.c: relocate (and extend) rpmDisplayQueryTags.
    - jbj: add tag{Clean,Name,Value,Type} methods to librpmdb.
    - jbj: lose header.h in favor of rpmtag.h several places.
    - jbj: make "struct headerTagTableEntry_s" opaque.
    - jbj: rpmte.h: mark the diagnostic routines with _RPMTE_INTERNAL.
    - jbj: remove signature header padding issue from the TODO.
    - jbj: fix: --querytags as uint32, not int32, display array return type.
    - jbj: add level of chaining indirection => opaque headerSprintfExtension_s.
    - jbj: casts to remove compiler signedness warnings.
    - jbj: display 1st 8 bytes of content for XAR archive members.
    - jbj: remove newlines in pkgio messages.
    - jbj: fix: padding between signature <-> metadata headers wrong, grr.
    - jbj: rpmxar.c: rearrange the messy markup and defines.
    - jbj: remove messy HAVE_XAR_H from installed rpmxar.h include.
    - jbj: retrofit 3 needed typedef's when compiling w/o HAVE_XAR_H.
    - jbj: rescusitate txar, pass private buffer through rpmxarPush.
    - jbj: re-add rpm2cpio.c.
    - jbj: spiffy error msgs for the XAR challenged users.
    - jbj: splint fiddles for rpmxar and rpmTag.
    - jbj: bury timedRead in pkgio.c, eliminate everywhere else.
    - jbj: eliminate (unused) hPTR_t.
    - jbj: hmm, a memory leak, add doco to the TODO file.