@@ -5,6 +5,7 @@
 #include "system.h"
 
 #include <rpmio.h>
+#include <header.h>		/* XXX headerIsEntry */
 #include <rpmcli.h>
 #include <rpmbuild.h>
 
