@@ -6,7 +6,6 @@
  *  This is the *only* module users of librpmbuild should need to include.
  */
 
-#include <header.h>
 #include <rpmcli.h>
 
 /* and it shouldn't need these :-( */
