@@ -5,7 +5,7 @@
 #include "system.h"
 
 #include "rpmio_internal.h"	/* XXX PGPHASHALGO_MD5 */
-#include <header.h>
+#include <header.h>		/* XXX hGetColor, headerIsEntry */
 #include <rpmcli.h>		/* XXX rpmcliPackagesTotal */
 
 #include <rpmmacro.h>		/* XXX rpmExpand("%{_dependency_whiteout}" */
