@@ -10,7 +10,7 @@
 #include <rpmmacro.h>
 #include <rpmurl.h>
 #include <rpmlua.h>
-#include <header.h>
+#include <rpmtag.h>
 #include <rpmlib.h>
 
 #include "cpio.h"
