@@ -5,7 +5,7 @@
 #include "system.h"
 
 #include <rpmio.h>
-#include <header.h>
+#include <rpmtag.h>
 #include <rpmcli.h>
 
 #include "rpmdb.h"
