@@ -5,7 +5,7 @@
 #include "system.h"
 
 #include <rpmio.h>
-#include <header.h>
+#include <header.h>		/* XXX headerFree, headerLink, headerIsEntry, headerGetOrigin */
 #include <rpmcli.h>
 
 #include "rpmdb.h"
